<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_qr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.song.kanfang_tuan.ui.activity.HomeQRActivity">
    <Button
        android:id="@+id/btn_scanQRCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/btn_scanQR_ma"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textQRHint"
        android:layout_width="match_parent"
        android:hint="@string/et_hintTextQR_ma"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_textQR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_createQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_below="@id/textQRHint"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_createQR_ma"/>
    <ImageView
        android:id="@+id/img_showQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_createQR"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
